[gd_scene load_steps=4 format=3 uid="uid://djp8hwhh66mgn"]

[ext_resource type="Script" uid="uid://dh8bidtempsvr" path="res://scripts/menuStart.gd" id="1_adj7g"]
[ext_resource type="Texture2D" uid="uid://dnyo4ld46q2nm" path="res://UIFiles/titlescreen.png" id="2_k4lr5"]
[ext_resource type="Theme" uid="uid://dhqskjxdkaiwv" path="res://UIFiles/MenuButtons.tres" id="3_wbdhn"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_adj7g")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_k4lr5")

[node name="loadBtn" type="Button" parent="."]
offset_left = 1050.0
offset_top = 58.4
offset_right = 1874.0
offset_bottom = 255.4
theme = ExtResource("3_wbdhn")
text = "Play"

[node name="newGameBtn" type="Button" parent="."]
offset_left = 1047.0
offset_top = 313.8
offset_right = 1871.0
offset_bottom = 510.8
theme = ExtResource("3_wbdhn")
text = "New"

[node name="settings" type="Button" parent="."]
offset_left = 1042.0
offset_top = 569.2
offset_right = 1866.0
offset_bottom = 766.2
theme = ExtResource("3_wbdhn")
text = "Settings"

[node name="exit" type="Button" parent="."]
offset_left = 1052.0
offset_top = 824.6
offset_right = 1876.0
offset_bottom = 1021.6
theme = ExtResource("3_wbdhn")
text = "Exit"

[connection signal="pressed" from="loadBtn" to="." method="_on_load_btn_pressed"]
[connection signal="pressed" from="newGameBtn" to="." method="_on_new_game_btn_pressed"]
[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
